PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
MESSAGE(STATUS "#########################")

SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS(-std=c++11 -g -Wall )
#SET(CMAKE_VERBOSE_MAKEFILE ON)   # 显示编译指令

FILE(GLOB ALL_CXX_SRCS_SERVER
./server.cpp
)

FILE(GLOB ALL_CXX_SRCS_CLINET
./client.cpp
)


SET(ALL_LIB  pthread
        )
ADD_EXECUTABLE(Server ${ALL_CXX_SRCS_SERVER} )
TARGET_LINK_LIBRARIES(Server ${ALL_LIB})

ADD_EXECUTABLE(Client ${ALL_CXX_SRCS_CLINET} )
TARGET_LINK_LIBRARIES(Client ${ALL_LIB})